--- a/site/styles.css
+++ b/site/styles.css
@@ -5,11 +5,11 @@
 :root {
     --color-black: #000000;
     --color-white: #FFFFFF;
-    --color-yellow: #FFC700;
-    --color-pink: #FF2E97;
-    --color-blue: #0047FF;
-    --color-green: #00D878;
-    --color-red: #FF003D;
+    --color-yellow: #FFD93D;
+    --color-pink: #FF6B9D;
+    --color-blue: #6BCF7F;
+    --color-green: #6BCF7F;
+    --color-red: #FF6B6B;
 }
 
 /* ===== RESET & BASE ===== */
