--- a/site/styles.css
+++ b/site/styles.css
@@ -252,7 +252,7 @@ section {
 }
 
 .manifesto-item:nth-child(4) {
-    background-color: var(--color-yellow);
+    background-color: var(--color-green);
     color: var(--color-black);
     box-shadow: 10px 10px 0 var(--color-pink);
 }
